# clonehero_drum_auto

./: README.md  __init__.py  audio_preprocessing.py  chart_generation.py  cli.py  dataset.py  evaluation.py  gui.py  mapping.py  pipeline.py  pyproject.toml  requirements.txt  transcription.py
utils/: logger.py
